<resources>
    <string name="app_name">LIFE4</string>
    <string name="file_provider_name">com.perrigogames.life4.fileprovider</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_record_data">Clear Trial Records</string>
    <string name="action_refresh_song_db">Refresh Song Database</string>
    <string name="action_export">Export Ranks</string>
    <string name="action_import">Import Ranks</string>
    <string name="action_records">Records</string>
    <string name="action_trial_records">Trial Records</string>
    <string name="action_show_motd">Message of the Day</string>
    <string name="action_web_profile">Web Profile</string>
    <string name="action_open_trial_submission">Open Trial Submission</string>
    <string name="action_shop_life4">Shop LIFE4</string>
    <string name="action_shop_dangershark">Shop DangerShark</string>
    <string name="description_shop_life4">Purchase physical LIFE4 gear</string>
    <string name="description_shop_dangershark">Purchase merch from our partner DangerShark</string>
    <string name="clear_first_songs">%s the first %d songs.</string>
    <string name="score_songs">Score %s+ on at least %d songs.</string>
    <string name="aaa_songs">AAA at least %d songs.</string>
    <string name="mfc_songs">MFC at least %d songs.</string>
    <string name="score_other_songs">Score %s+ on at least %d other songs.</string>
    <string name="aaa_other_songs">AAA at least %d other songs.</string>
    <string name="mfc_other_songs">MFC at least %d other songs.</string>
    <string name="score_specific_song">Score %s+ on %s.</string>
    <string name="score_specific_song_difficulty">Score %s+ on %s (%s).</string>
    <string name="aaa_specific_song">AAA %s.</string>
    <string name="mfc_specific_song">MFC %s.</string>
    <string name="clear_every_song">%s every song.</string>
    <string name="score_every_song">Score %s+ on every song.</string>
    <string name="aaa_every_song">AAA every song.</string>
    <string name="mfc_every_song">MFC every song.</string>
    <string name="score_on_remainder">Score %s+ on all other songs.</string>
    <string name="aaa_on_remainder">AAA all other songs.</string>
    <string name="mfc_on_remainder">MFC all other songs.</string>
    <string name="bad_judgments_count">%d or fewer Greats, Goods, and Misses.</string>
    <string name="misses_count">%d or fewer Misses.</string>
    <string name="misses_each_count">%d or fewer Misses on each song.</string>
    <string name="missing_ex_count">%d missing EX or less.</string>
    <string name="missing_ex_count_threshold">%d missing EX or less (%d).</string>
    <string name="pass_the_trial">Pass the Trial.</string>
    <string name="no_bad_judgments">PFC all songs.</string>
    <string name="no_missing_ex">MFC all songs.</string>
    <string name="no_misses">Full combo all songs.</string>
    <string name="rank_goal_category_trials">Trials</string>
    <string name="rank_goal_category_calories">Calories</string>
    <string name="rank_goal_category_mfcs">MFCs</string>
    <string name="rank_goal_category_pfcs">PFCs</string>
    <string name="rank_goal_category_combo">Combo</string>
    <string name="rank_goal_category_life4">LIFE4</string>
    <string name="rank_goal_category_single_score">Single Score</string>
    <string name="rank_goal_category_single_clear">Single Clear</string>
    <string name="rank_goal_category_set_clear">Set Clear</string>
    <string name="rank_goal_calories">Burn %d calories in one day.</string>
    <string name="rank_goal_set_different">%s a set of %s.</string>
    <string name="rank_goal_set_sequential">%s %s in a row.</string>
    <string name="rank_goal_clear_trial">Earn %s on %d Trials.</string>
    <string name="rank_goal_clear_trial_single">Earn %s on any Trial.</string>
    <string name="rank_goal_diff_clear_single">%s %s.</string>
    <string name="rank_goal_diff_score">Score %s+ on %s.</string>
    <string name="rank_goal_diff_score_aaa">AAA %s.</string>
    <string name="rank_goal_diff_average">Score an average of %s on %s.</string>
    <string name="rank_goal_mfc_points">Earn %.1f MFC Points.</string>
    <string name="exceptions_num_modifier">"%s (except %d)"</string>
    <string name="exceptions_songs_modifier">"%s (except %s)"</string>
    <string name="all_items">all %s\'s</string>
    <string name="num_items">any %d %s\'s</string>
    <string name="a_item">a %s</string>
    <string name="an_item">an %s</string>
    <string name="fail">Fail</string>
    <string name="clear">Clear</string>
    <string name="clear_a">A</string>
    <string name="clear_a_plus">A+</string>
    <string name="clear_aa">AA</string>
    <string name="clear_aa_plus">AA+</string>
    <string name="clear_aaa">AAA</string>
    <string name="clear_life4">LIFE4 clear</string>
    <string name="clear_fc">Full Combo</string>
    <string name="clear_fc_short">FC</string>
    <string name="clear_gfc">Great Full Combo</string>
    <string name="clear_gfc_short">GFC</string>
    <string name="clear_pfc">Perfect Full Combo</string>
    <string name="clear_pfc_short">PFC</string>
    <string name="clear_mfc">Marvelous Full Combo</string>
    <string name="clear_mfc_short">MFC</string>
    <string name="lamp_clear">Clear lamp</string>
    <string name="lamp_life4">Red lamp (LIFE4)</string>
    <string name="lamp_fc">Blue lamp (Full Combo)</string>
    <string name="lamp_gfc">Green lamp (GFC)</string>
    <string name="lamp_pfc">Gold lamp (PFC)</string>
    <string name="lamp_mfc">White lamp (MFC)</string>
    <string name="score">Score</string>
    <string name="ex_score">EX Score</string>
    <string name="misses">Misses</string>
    <string name="use_photo">Use Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="add_gallery">Add from Gallery</string>
    <string name="replace_gallery">Replace from Gallery</string>
    <string name="edit_details">Edit Details</string>
    <string name="must_enter_number">Must enter a number</string>
    <string name="camera_permission_title">Camera Permission</string>
    <string name="camera_permission_description_popup">This app needs your permission to use the camera to take LIFE4 verification photos.</string>
    <string name="camera_permission_description_redirect">This app needs your permission to use the camera to take LIFE4 verification photos. Would you like to open your permission settings and grant this permission?</string>
    <string name="gallery_permission_title">Gallery Permission</string>
    <string name="gallery_permission_description_popup">This app needs permission to access your photos to use them for LIFE4 verification.</string>
    <string name="status_error">We found a problem: %1$s</string>
    <string name="trial_failed">Trial Failed!</string>
    <string name="trial_fail_confirmation">Would you like to Concede and save this Trial attempt?</string>
    <string name="trial_fail_no_rank_confirmation">It is no longer possible to earn a rank on %s.\n\nWould you like to Concede and save this Trial attempt?</string>
    <string name="trial_close_confirmation">The progress made in this Trial will not be saved.</string>
    <string name="trial_concede_confirmation_format">This Trial will be saved to your records as incomplete for %s (%s).\n\nYou will NOT get a chance to log your failed song if you haven\'t already.</string>
    <string name="trial_retired_dialog_title">Retired</string>
    <string name="trial_retired_dialog_description_format">LIFE4 no longer accepts new submissions for %s.\n\nYou may still track your progress, but it will not be saved in the app and cannot be submitted to earn a rank.</string>
    <string name="photo_save_confirmation">This photo will not be saved.</string>
    <string name="details_save_confirmation">Your changes will not be saved.</string>
    <string name="photo_save_error">Error creating photo</string>
    <string name="retired_suffix_format">%s (Retired)</string>
    <string name="confirm_trial_title">Confirm Trial Submission</string>
    <string name="confirm_placement_title">Confirm Placement Submission</string>
    <string name="trial_submit_dialog_title">Submit Scores</string>
    <string name="trial_submit_dialog_rank_confirmation">Did you pass all requirements for %s rank?</string>
    <string name="trial_submit_dialog_prompt">Photos are saved to your SD card\'s Pictures/LIFE4 folder. These photos can be uploaded to LIFE4\'s Submission Page manually.\n\nWould you like to be taken there now?</string>
    <string name="trial_submit_retired_dialog_prompt_format">Photos are saved to your SD card\'s Pictures/LIFE4 folder.\n\nSince %s has been retired, your progress will not be saved and your scores cannot be submitted to earn a rank.</string>
    <string name="trial_not_saved">This Trial has not been saved!</string>
    <string name="confirm_erase_goal_data">Are you sure you want to clear all saved goal states?</string>
    <string name="confirm_erase_trial_data">Are you sure you want to clear all saved rank data?</string>
    <string name="confirm_erase_result_data">Are you sure you want to clear all song result data?</string>
    <string name="confirm_refresh_song_db">Are you sure you want to refresh the local song database?\n\nYou will need to reimport your Score Manager data.</string>
    <string name="goal_progress_format">"%s / %s"</string>
    <string name="goal_remaining_format">"%d / %d left"</string>
    <string name="ex_score_fraction_format">"%d/%d EX"</string>
    <string name="difficulty_string_format">"%s (%d)"</string>
    <string name="score_string_format">"%s (%d EX)"</string>
    <string name="ex_score_string_format">%d EX</string>
    <string name="ex_score_progress_format">"%d / %d EX"</string>
    <string name="ex_score_missing_string_format">%d EX (%d)</string>
    <string name="ex_score_missing_newline_string_format">%d EX\n(%d)</string>
    <string name="score_string_summary_format">"%s\n%d EX"</string>
    <string name="score_string_summary_format_advanced">"%d Miss\n%d Good\n%d Great"\n%d EX</string>
    <string name="score_string_summary_format_expert">"%d &lt;Great\n%d Perfect"\n%d EX</string>
    <string name="author_credit_format">Created by %s</string>
    <string name="event_directions">In this event, you\'re competing against everyone with a %s Rank.  Aim for the highest combined EX Score!</string>
    <string name="event_ends_past_format">Event ended on %s</string>
    <string name="event_ends_future_format">Event ends %s</string>
    <string name="level_header">Level %d</string>
    <string name="goals">Goals:</string>
    <string name="other_goals">Other Goals</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="finalize">Finalize</string>
    <string name="submit">Submit</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrow_left">←</string>
    <string name="arrow_right">→</string>
    <string name="error">Error</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="user_info">User Info</string>
    <string name="player_name">Player Name</string>
    <string name="player_rank">Player Rank</string>
    <string name="rival_code">Rival Code</string>
    <string name="twitter_name">Twitter Name</string>
    <string name="show_notifications">Show info notifications during submission</string>
    <string name="test_notifications">Test Info Notifications</string>
    <string name="user_info_notifications">User Info Notifications</string>
    <string name="ladder_goals_complete">All of your goals are complete!</string>
    <string name="ladder_submit_photos">Submit your photos to LIFE4 to rank up.</string>
    <string name="show_notifications_title">Show Info Notifications</string>
</resources>