<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_goals_clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_padding_large"
        android:fontFamily="@font/avenir"
        android:gravity="center"
        android:text="@string/ladder_goals_complete"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/image_rank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.perrigogames.life4.android.view.RankImageView
        android:id="@+id/image_rank"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toTopOf="@id/text_submit_photos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_goals_clear" />

    <TextView
        android:id="@+id/text_submit_photos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_padding_large"
        android:fontFamily="@font/avenir"
        android:gravity="center"
        android:text="@string/ladder_submit_photos"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_rank"/>

    <Button
        android:id="@+id/button_submit"
        style="@style/BottomProgressButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>